layout: hero section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,80 @@
         </div>
       </div>
     </header>
+    <main class="container">
+      <!-- Hero -->
+      <section class="section">
+        <h1 class="section__title section__title--large">
+          <span>W</span>Insp Workshop Inspiratif di Mana Ide Bertemu Aksi
+        </h1>
+        <p class="section__copy">
+          Winsp adalah Tempat belajar interaktif yang dirancang untuk membantu
+          Anda mengembangkan keterampilan baru, memperluas jaringan, dan
+          menemukan potensi terbaik dalam diri Anda.
+        </p>
+        <a href="#" class="button button--theme-dark">Gabung Sekarang</a>
+        <!-- Partnership -->
+        <div class="partnership">
+          <p class="partnership__copy">Partnership:</p>
+          <div class="partnership__group">
+            <div class="partnership__item">
+              <img
+                src="logoipsum-1.svg"
+                alt="UMKM Madya"
+                class="partnership__image"
+              />
+            </div>
+            <div class="partnership__item">
+              <img
+                src="logoipsum-2.svg"
+                alt="Telcom"
+                class="partnership__image"
+              />
+            </div>
+            <div class="partnership__item">
+              <img
+                src="logoipsum-3.svg"
+                alt="Universitas Madya"
+                class="partnership__image"
+              />
+            </div>
+            <a
+              href="#"
+              class="partnership__item"
+              aria-label="Daftar sebagai partnership kami"
+            >
+              <span class="icon icon--plus"></span>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- Banner -->
+      <section class="section section--flex">
+        <div class="section__wrap">
+          <div>
+            <p
+              class="section__title section__title--large section__title--undistance"
+            >
+              15000+
+            </p>
+            <p class="section__copy section__copy--undistance">Peserta</p>
+          </div>
+          <div>
+            <p
+              class="section__title section__title--large section__title--undistance"
+            >
+              100%
+            </p>
+            <p class="section__copy section__copy--undistance">
+              Direkomendasikan
+            </p>
+          </div>
+        </div>
+        <div class="section__image">
+          <img src="hero-image.jpg" alt="Peserta workshop berdiskusi" />
+        </div>
+      </section>
+    </main>
 
     <script type="module" src="/src/main.js"></script>
   </body>
