--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
           </div>
         </div>
       </section>
+      <!-- Program -->
       <section class="section section--content-center">
         <h2 class="section__title section__title--medium">Program Workshop</h2>
         <p>Kami menawarkan berbagai topik workshop, seperti:</p>
@@ -320,7 +321,149 @@
           </div>
         </div>
       </section>
+      <!-- Testimoni -->
+      <section class="section section--content-center">
+        <h2 class="section__title section__title--medium">Apa Kata Mereka</h2>
+        <p>Beberapa pengalaman dari peserta workshop:</p>
+        <!-- Slide -->
+        <div class="slide">
+          <div class="slide__item active">
+            <blockquote class="slide__quote">
+              “Saya ikut workshop tentang personal branding dan hasilnya luar
+              biasa! Pembicaranya insightful dan materinya bisa langsung saya
+              aplikasikan.”
+            </blockquote>
+            <cite class="slide__cite">
+              <img src="testimonial-1.jpg" alt="Ayu Nigsih" />
+              <div>
+                <p>Ayu Nigsih</p>
+                <p>Freelancer</p>
+              </div>
+            </cite>
+          </div>
+          <div class="slide__item">
+            <blockquote class="slide__quote">
+              "Workshop ini sangat membuka wawasan saya! Materinya disampaikan
+              dengan cara yang mudah dipahami dan aplikatif. Terima kasih banyak
+              untuk pengalaman yang luar biasa."
+            </blockquote>
+            <div class="slide__cite">
+              <img src="testimonial-2.jpg" alt="Dewi Sinta" />
+              <div>
+                <p>Dewi Sinta</p>
+                <p>Mahasiswi</p>
+              </div>
+            </div>
+          </div>
+          <div class="slide__item">
+            <blockquote class="slide__quote">
+              "Sebelum ikut workshop, saya masih bingung harus mulai dari mana.
+              Sekarang saya merasa lebih percaya diri untuk memulai project
+              sendiri!"Terima kasih banyak untuk pengalaman yang luar biasa."
+            </blockquote>
+            <cite class="slide__cite">
+              <img src="testimonial-3.jpg" alt="Rizki Putra" />
+              <div>
+                <p>Rizki Putra</p>
+                <p>Web Development</p>
+              </div>
+            </cite>
+          </div>
+          <div class="slide__navigation">
+            <button type="button" class="slide__prev" aria-label="previous">
+              <svg
+                width="48"
+                height="48"
+                viewBox="0 0 48 48"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+              >
+                <path
+                  opacity="0.2"
+                  d="M42 24C42 27.5601 40.9443 31.0402 38.9665 34.0003C36.9886 36.9604 34.1774 39.2675 30.8883 40.6298C27.5992 41.9922 23.98 42.3487 20.4884 41.6541C16.9967 40.9596 13.7894 39.2453 11.2721 36.7279C8.75474 34.2106 7.04041 31.0033 6.34587 27.5116C5.65134 24.02 6.0078 20.4008 7.37018 17.1117C8.73255 13.8226 11.0397 11.0114 13.9997 9.03355C16.9598 7.05568 20.4399 6 24 6C28.7739 6 33.3523 7.89642 36.7279 11.2721C40.1036 14.6477 42 19.2261 42 24Z"
+                  fill="#93A5F9"
+                />
+                <path
+                  d="M24 4.5C20.1433 4.5 16.3731 5.64366 13.1664 7.78634C9.95963 9.92903 7.46027 12.9745 5.98436 16.5377C4.50845 20.1008 4.12228 24.0216 4.8747 27.8043C5.62711 31.5869 7.4843 35.0615 10.2114 37.7886C12.9386 40.5157 16.4131 42.3729 20.1957 43.1253C23.9784 43.8777 27.8992 43.4916 31.4623 42.0156C35.0255 40.5397 38.071 38.0404 40.2137 34.8336C42.3564 31.6269 43.5 27.8567 43.5 24C43.4945 18.83 41.4383 13.8732 37.7826 10.2174C34.1268 6.56167 29.1701 4.50546 24 4.5ZM24 40.5C20.7366 40.5 17.5465 39.5323 14.8331 37.7192C12.1197 35.9062 10.0048 33.3293 8.756 30.3143C7.50715 27.2993 7.1804 23.9817 7.81705 20.781C8.45371 17.5803 10.0252 14.6403 12.3327 12.3327C14.6403 10.0252 17.5803 8.4537 20.781 7.81704C23.9817 7.18039 27.2993 7.50714 30.3143 8.75599C33.3293 10.0048 35.9062 12.1197 37.7193 14.8331C39.5323 17.5465 40.5 20.7366 40.5 24C40.495 28.3745 38.7551 32.5685 35.6618 35.6618C32.5685 38.7551 28.3746 40.495 24 40.5ZM28.0613 17.5613L21.6206 24L28.0613 30.4387C28.2006 30.5781 28.3112 30.7436 28.3866 30.9257C28.462 31.1077 28.5008 31.3029 28.5008 31.5C28.5008 31.6971 28.462 31.8923 28.3866 32.0743C28.3112 32.2564 28.2006 32.4219 28.0613 32.5613C27.9219 32.7006 27.7564 32.8112 27.5744 32.8866C27.3923 32.962 27.1971 33.0008 27 33.0008C26.8029 33.0008 26.6078 32.962 26.4257 32.8866C26.2436 32.8112 26.0781 32.7006 25.9388 32.5613L18.4388 25.0613C18.2993 24.9219 18.1887 24.7565 18.1132 24.5744C18.0377 24.3923 17.9988 24.1971 17.9988 24C17.9988 23.8029 18.0377 23.6077 18.1132 23.4256C18.1887 23.2435 18.2993 23.0781 18.4388 22.9387L25.9388 15.4387C26.0781 15.2994 26.2436 15.1888 26.4257 15.1134C26.6078 15.038 26.8029 14.9992 27 14.9992C27.1971 14.9992 27.3923 15.038 27.5744 15.1134C27.7564 15.1888 27.9219 15.2994 28.0613 15.4387C28.2006 15.5781 28.3112 15.7436 28.3866 15.9257C28.462 16.1077 28.5008 16.3029 28.5008 16.5C28.5008 16.6971 28.462 16.8923 28.3866 17.0743C28.3112 17.2564 28.2006 17.4219 28.0613 17.5613Z"
+                  fill="#423EAC"
+                />
+              </svg>
+            </button>
+            <button type="button" class="slide__next" aria-label="next">
+              <svg
+                width="48"
+                height="48"
+                viewBox="0 0 48 48"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+              >
+                <path
+                  opacity="0.2"
+                  d="M5.99999 24C5.99999 27.5601 7.05568 31.0402 9.03354 34.0003C11.0114 36.9604 13.8226 39.2675 17.1117 40.6298C20.4008 41.9922 24.02 42.3487 27.5116 41.6541C31.0033 40.9596 34.2106 39.2453 36.7279 36.7279C39.2453 34.2106 40.9596 31.0033 41.6541 27.5116C42.3487 24.02 41.9922 20.4008 40.6298 17.1117C39.2674 13.8226 36.9603 11.0114 34.0003 9.03355C31.0402 7.05568 27.5601 6 24 6C19.2261 6 14.6477 7.89642 11.2721 11.2721C7.89642 14.6477 5.99999 19.2261 5.99999 24Z"
+                  fill="#93A5F9"
+                />
+                <path
+                  d="M24 4.5C27.8567 4.5 31.6269 5.64366 34.8336 7.78634C38.0404 9.92903 40.5397 12.9745 42.0156 16.5377C43.4916 20.1008 43.8777 24.0216 43.1253 27.8043C42.3729 31.5869 40.5157 35.0615 37.7886 37.7886C35.0614 40.5157 31.5869 42.3729 27.8043 43.1253C24.0216 43.8777 20.1008 43.4916 16.5377 42.0156C12.9745 40.5397 9.92902 38.0404 7.78633 34.8336C5.64365 31.6269 4.49999 27.8567 4.49999 24C4.50545 18.83 6.56166 13.8732 10.2174 10.2174C13.8732 6.56167 18.8299 4.50546 24 4.5ZM24 40.5C27.2634 40.5 30.4535 39.5323 33.1669 37.7192C35.8803 35.9062 37.9952 33.3293 39.244 30.3143C40.4928 27.2993 40.8196 23.9817 40.1829 20.781C39.5463 17.5803 37.9748 14.6403 35.6673 12.3327C33.3597 10.0252 30.4197 8.4537 27.219 7.81704C24.0183 7.18039 20.7007 7.50714 17.6857 8.75599C14.6707 10.0048 12.0938 12.1197 10.2807 14.8331C8.4677 17.5465 7.49999 20.7366 7.49999 24C7.50496 28.3745 9.24493 32.5685 12.3382 35.6618C15.4315 38.7551 19.6254 40.495 24 40.5ZM19.9387 17.5613L26.3794 24L19.9387 30.4387C19.7994 30.5781 19.6888 30.7436 19.6134 30.9257C19.538 31.1077 19.4992 31.3029 19.4992 31.5C19.4992 31.6971 19.538 31.8923 19.6134 32.0743C19.6888 32.2564 19.7994 32.4219 19.9387 32.5613C20.0781 32.7006 20.2436 32.8112 20.4256 32.8866C20.6077 32.962 20.8029 33.0008 21 33.0008C21.1971 33.0008 21.3922 32.962 21.5743 32.8866C21.7564 32.8112 21.9219 32.7006 22.0612 32.5613L29.5612 25.0613C29.7007 24.9219 29.8113 24.7565 29.8868 24.5744C29.9623 24.3923 30.0012 24.1971 30.0012 24C30.0012 23.8029 29.9623 23.6077 29.8868 23.4256C29.8113 23.2435 29.7007 23.0781 29.5612 22.9387L22.0612 15.4387C21.9219 15.2994 21.7564 15.1888 21.5743 15.1134C21.3922 15.038 21.1971 14.9992 21 14.9992C20.8029 14.9992 20.6077 15.038 20.4256 15.1134C20.2436 15.1888 20.0781 15.2994 19.9387 15.4387C19.7994 15.5781 19.6888 15.7436 19.6134 15.9257C19.538 16.1077 19.4992 16.3029 19.4992 16.5C19.4992 16.6971 19.538 16.8923 19.6134 17.0743C19.6888 17.2564 19.7994 17.4219 19.9387 17.5613Z"
+                  fill="#423EAC"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- Call To Action -->
+      <div class="section section--content-center section--with-theme">
+        <h2 class="section__title section__title--large section__title--cta">
+          Siap Jadi Bagian dari <span>W</span>Insp?
+        </h2>
+        <p class="section__copy">
+          Daftarkan dirimu sekarang dan mulai perjalanan inspiratifmu bersama
+          para mentor terbaik dan komunitas kreatif!
+        </p>
+        <a href="#" class="button button--theme-dark"> Daftar Sekarang </a>
+      </div>
     </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <a href="#" class="logo"> <span class="logo__oblique">W</span>Insp </a>
+        <div class="footer__wrap">
+          <div class="footer__item">
+            <p>
+              WInsp Workshop, Jalan Inspiratif No.1, Kota Bandung, Indonesia
+            </p>
+            <p>workshopinspiratif@winsp.com</p>
+            <p>+62-7222417000</p>
+          </div>
+          <div class="footer__item">
+            <a href="#">Instagram</a>
+            <a href="#">Twitter/X</a>
+            <a href="#">Youtube</a>
+          </div>
+          <div class="footer__item">
+            <a href="#">Tentang Kami</a>
+            <a href="#">Kebijakan Privasi</a>
+          </div>
+          <div class="footer__item footer__item--special">
+            <div class="footer__form">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+                class="footer__input"
+              />
+              <button type="submit" class="button button--theme-dark">
+                Langanan
+              </button>
+            </div>
+            <p>&copy; 2025 Winsp. All Right Reserved</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="/src/main.js"></script>
   </body>
